Add page for lightning talks

--- a/config.toml
+++ b/config.toml
@@ -35,6 +35,7 @@ copyright = "Copyright &copy; 2025"
 menu = [
     { name = "news", url = "event2025", trailing_slash = true },
     { name = "program", url = "program", trailing_slash = true },
+    { name = "talks", url = "talks" },
     { name = "about", url = "about", trailing_slash = true },
     { name = "contact", url = "contact", trailing_slash = true },
 ]
@@ -43,6 +44,7 @@ footer_menu = [
     { name = "imprint", url = "imprint", trailing_slash = true },
     { name = "contact", url = "contact", trailing_slash = true },
 ]
+skin = "indigo_ingot"
 
 # Set favicon
 favicon = "images/logo.png"
